test/Fail/No-erased-levels-in-primitives-1.agda
{-# OPTIONS --no-erased-levels-in-primitives #-}

open import Agda.Builtin.Bool
