test/Fail/No-erased-levels-in-primitives-1.err
No-erased-levels-in-primitives-1.agda:3.1-30: error: [CoInfectiveImport]
Importing module Agda.Builtin.Bool not using the
--no-erased-levels-in-primitives flag from a module which does.
when scope checking the declaration
  open import Agda.Builtin.Bool
